# fastapi-template-project

./: README.md  copier.yaml
{{project_name}}/: .coveragerc  .env-example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  docker-compose.yaml.jinja  pyproject.toml  pyproject.toml.jinja  pyrefly.toml
{{project_name}}/src/: create_superuser.py  exceptions.py  main.py
{{project_name}}/src/alembic/: env.py
{{project_name}}/src/alembic/versions/: 3d255436b0dc_create_users_table.py
{{project_name}}/src/core/: config.py  logger.py  middleware.py  security.py
{{project_name}}/src/crud/: auth.py  user.py
{{project_name}}/src/db/: database.py
{{project_name}}/src/models/: user.py
{{project_name}}/src/routers/: auth.py  health.py  user.py
{{project_name}}/src/schemas/: auth.py  user.py
{{project_name}}/src/services/: auth.py  user.py
{{project_name}}/tests/: conftest.py
{{project_name}}/tests/crud/: test_auth.py  test_user.py
{{project_name}}/tests/endpoints/: test_auth.py  test_user.py
{{project_name}}/tests/utils/: test_security.py
